--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
-  "name": "react-native-wheel-picky",
-  "packageManager": "yarn@3.5.0"
+  "name": "@liukai2_p/react-native-wheel-picky",
+  "version": "1.0.0",
+  "author": {
+    "name": "liukai2_p",
+    "email": "291250358@qq.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/liukai-2p/react-native-wheel-picky.git"
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
