--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "react-native-wheel-picky": ["./src/index"]
+      "@liukai2_p/react-native-wheel-picky": ["./src/index"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
