--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@liukai2_p/react-native-wheel-picky",
-  "packageManager": "yarn@3.5.0",
-  "version": "1.0.2",
+  "version": "1.0.3",
+  "main": "src/index.ts",
   "author": {
     "name": "liukai2_p",
     "email": "291250358@qq.com"
