--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "packageManager": "yarn@3.5.0",
   "version": "1.0.4",
   "main": "src/index.ts",
+  "license": "MIT",
+  "private": false,
   "author": {
     "name": "liukai2_p",
     "email": "291250358@qq.com"
