--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@liukai2_p/react-native-wheel-picky",
+  "description": "An awesome native wheel picker component for react-native",
+  "homepage": "https://github.com/liukai-2p/react-native-wheel-picky#readme",
   "packageManager": "yarn@3.5.0",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "src/index.ts",
   "license": "MIT",
   "private": false,
